tests/NormalTests/paczka1/fuzzy1/73753828.err
Error in line 9: vivZbyZRK A792 20,9
Error in line 24: H2uaydZ7X S561 32,2
Error in line 34: QT6eWiQc2M S561 44,91
